# libWebServer

./: CMakeLists.txt  WebServer.cpp  WebServer.h  library.h
Test/: CMakeLists.txt  URLRequesTests.cpp  WebUtilsTest.cpp
TestApps/: Main.cpp
webserver/: CMakeLists.txt  IUrlRequestSetting.h  UrlRequest.cpp  UrlRequest.h  UrlRequestSetting.cpp  UrlRequestSetting.h  WebServer.cpp  WebServer.h  WebUtils.h
